[project]
name = "asb0-backend"
version = "0.1.0"
description = "Proactive Public Health Shield Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "flask==3.0.3",
    "apscheduler==3.10.4",
    "supabase==2.6.0",
    "httpx==0.27.2",
    "feedparser==6.0.11",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
]
